@@ -432,6 +432,7 @@ Angel Carpintero
    * No PQfinish().
    * Added a conditional check for avformat_alloc_context , av_avformat_alloc_context to fix
      http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2011x10x05x071936
+   * Added a new starting option -m to disable motion detection.
  
 Jared D
    * Change bayer2rgb24() to fix a problem with sn9c102 driver
