@@ -37,15 +37,15 @@
 #define SHOW_LEVEL_VALUE(x)     (x+1)
 
 /* Log types */
-#define TYPE_CORE               0             /* Core logs         */
-#define TYPE_STREAM             1             /* Stream logs       */
-#define TYPE_ENCODER            2             /* Encoder logs      */
-#define TYPE_NETCAM             3             /* Netcam logs       */
-#define TYPE_DB                 4             /* Database logs     */
-#define TYPE_EVENTS             5             /* Events logs       */
-#define TYPE_TRACK              6             /* Track logs        */
-#define TYPE_VIDEO              7             /* V4L1/2 Bktr logs  */
-#define TYPE_ALL                8             /* All type logs     */
+#define TYPE_CORE               1             /* Core logs         */
+#define TYPE_STREAM             2             /* Stream logs       */
+#define TYPE_ENCODER            3             /* Encoder logs      */
+#define TYPE_NETCAM             4             /* Netcam logs       */
+#define TYPE_DB                 5             /* Database logs     */
+#define TYPE_EVENTS             6             /* Events logs       */
+#define TYPE_TRACK              7             /* Track logs        */
+#define TYPE_VIDEO              8             /* V4L1/2 Bktr logs  */
+#define TYPE_ALL                9             /* All type logs     */
 #define TYPE_DEFAULT            TYPE_ALL      /* Default type      */
 #define TYPE_DEFAULT_STR        "ALL"         /* Default name logs */
 
